# claude-code-hooks

./: .coverage  .env.example  .gitignore  .mise.toml  CLAUDE.md  README.md  config.toml  config.toml.example  config_timezone_demo.toml  coverage.xml  pyproject.toml  ruff.toml
.devcontainer/: .bashrc  Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: lint.yml  test.yml
claude_code_pushbullet_notify/: __init__.py  __main__.py  config.py  pushbullet.py  template.py  transcript.py
docs/tasks/: message-splitting-tasks.md
scripts/: claude-code-pushbullet-notify
tests/: __init__.py  conftest.py  test_extended_msg_variables.py  test_git_info.py  test_message_splitting.py  test_msg_variables_and_functions.py  test_new_template_variables.py  test_notification.py  test_template.py  test_template_integration.py  test_timezone_variables.py  test_transcript.py
