[project]
name = "claude-code-pushbullet-notify"
version = "1.0.0"
description = "Claude Code hook for Pushbullet notifications"
dependencies = [
    "cchooks",
    "requests",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.8"
scripts = {claude-code-pushbullet-notify = "claude_code_pushbullet_notify:main"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_code_pushbullet_notify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pyright]
include = ["claude_code_pushbullet_notify", "tests"]
exclude = [".venv", "build", "dist"]
typeCheckingMode = "basic"
pythonVersion = "3.9"
pythonPlatform = "Linux"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportOptionalMemberAccess = false
reportGeneralTypeIssues = true
reportUnboundVariable = true